--- a/app/views/app/dashboard/index.html.erb
+++ b/app/views/app/dashboard/index.html.erb
@@ -1,3 +1,4 @@
+<%= render "shared/navbar" %>
 <div class="min-h-screen bg-gradient-to-br from-blue-50 to-indigo-50">
   <div class="max-w-4xl mx-auto px-4 py-8">
     <div class="bg-white rounded-2xl shadow-xl p-8">
