improve landing page

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,9 +8,9 @@
       <% end %>
     </div>
     <div class="flex items-center space-x-4">
-      <%= link_to "Features", "#features", class: "ext-gray-600 hover:text-gray-900" %>
-      <%= link_to "Pricing", "#pricing", class: "ext-gray-600 hover:text-gray-900" %>
-      <%= link_to "Endpoints", "#endpoints", class: "ext-gray-600 hover:text-gray-900" %>
+      <%= link_to "Features", "#{public_root_url}#features", class: "ext-gray-600 hover:text-gray-900" %>
+      <%= link_to "Pricing", "#{public_root_url}#pricing", class: "ext-gray-600 hover:text-gray-900" %>
+      <%= link_to "Endpoints", "#{public_root_url}#endpoints", class: "ext-gray-600 hover:text-gray-900" %>
       <%= link_to "Get API Key", app_root_path, class: "inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700" %>
     </div>
   </nav>
