--- a/app/views/oas_rails/oas_rails/index.html.erb
+++ b/app/views/oas_rails/oas_rails/index.html.erb
@@ -11,22 +11,7 @@
   api-key-location = "header"
   api-key-value="Bearer <%= Current.user&.api_token %>"
   >
-  <header class="z-10 fixed w-[-webkit-fill-available] w-[-moz-available] bg-white shadow-sm">
-    <nav class="mx-auto px-4 sm:px-6 lg:px-8 h-16 flex items-center justify-between">
-      <div class="flex items-center space-x-2">
-        <i data-lucide="shield" class="h-8 w-8 text-indigo-600"></i>
-        <%= link_to public_root_path do %>
-          <span class="text-xl font-bold text-gray-900">FetchSerp API</span>
-        <% end %>
-      </div>
-      <div class="flex items-center space-x-4">
-        <a href="/#features" class="text-gray-600 hover:text-gray-900">Features</a>
-        <a href="/#pricing" class="text-gray-600 hover:text-gray-900">Pricing</a>
-        <a href="/docs" class="text-gray-600 hover:text-gray-900">Docs</a>
-        <%= link_to "Get API Key", app_root_path, class: "inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700" %>
-      </div>
-    </nav>
-  </header>
+  <%= render "shared/navbar" %>
   <div class="pt-18"></div>
 </rapi-doc>
 <style>
