improve landing page

--- a/app/views/public/landing_page/index.html.erb
+++ b/app/views/public/landing_page/index.html.erb
@@ -28,15 +28,15 @@
 
       <!-- What We Do Section -->
       <div class="mb-6">
-        <p class="text-gray-600">
+        <p class="text-lg text-gray-600">
           We provide a robust API that combines advanced web scraping with intelligent AI analysis, empowering developers, businesses, and analysts to unlock the full potential of online data. Whether it’s competitor research, market intelligence, or content optimization, our tools are designed to make data work for you.
         </p>
       </div>
 
       <!-- Call to Action -->
       <div class="text-center">
-        <p class="text-gray-600 mb-4">Ready to unlock data ?</p>
-        <%= link_to "Get Started", app_root_path, class: "inline-block bg-indigo-600 text-white font-semibold py-2 px-4 rounded-lg hover:bg-indigo-700 transition" %>
+        <p class="text-lg text-gray-600 mb-4">Ready to unlock data ?</p>
+        <%= link_to "Get Started", app_root_path, class: "inline-block bg-indigo-600 text-white font-medium py-2 px-4 rounded-lg hover:bg-indigo-700 transition" %>
       </div>
     </div>
   </section>
