improve landing page

--- a/app/views/public/landing_page/index.html.erb
+++ b/app/views/public/landing_page/index.html.erb
@@ -5,7 +5,7 @@
     <div class="text-center">
       <h1 class="text-4xl sm:text-5xl md:text-6xl font-extrabold text-gray-900 tracking-tight">
         Next-Level Web Scraping & <br>
-        <span class="text-indigo-600">AI Data Extraction</span>
+        <span class="text-indigo-600">AI powered Data Analysis</span>
       </h1>
       <p class="mt-6 max-w-2xl mx-auto text-xl text-gray-500">
         Transform Web Data into Actionable Insights with Our Scraping & AI API
