--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -4,7 +4,7 @@
     <div class="flex items-center space-x-2">
       <i data-lucide="shield" class="h-8 w-8 text-indigo-600"></i>
       <%= link_to public_root_path do %>
-        <span class="text-xl font-bold text-gray-900">FetchSerp API</span>
+        <span class="text-xl font-bold text-gray-900">PullAPI</span>
       <% end %>
     </div>
     <div class="flex items-center space-x-4">
