--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -1,7 +1,7 @@
 <div class="bg-gradient-to-b from-gray-50 to-gray-100 py-24 sm:py-32">
   <div class="mx-auto max-w-7xl px-6 lg:px-8">
     <div class="mx-auto max-w-2xl">
-      <h2 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">Fetch Serp Api Blog</h2>
+      <h2 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">PullAPI Blog</h2>
       <p class="mt-2 text-lg leading-8 text-gray-600">Insights about scraping and data analysis.</p>
       
       <div class="mt-10 space-y-16 border-t border-gray-200 pt-10 sm:mt-16 sm:pt-16">
