--- a/app/views/app/dashboard/index.html.erb
+++ b/app/views/app/dashboard/index.html.erb
@@ -26,15 +26,18 @@
               <i data-lucide="key" class="w-6 h-6 text-indigo-500 mr-3"></i>
               <div>
                 <p class="text-sm text-gray-500">API Token</p>
-                <p id="apiToken" class="text-lg font-medium text-gray-800 font-mono"><%= @user.api_token %></p>
+                <p id="apiToken" class="text-lg font-medium text-gray-800 font-mono break-all">
+                  <%= @user.api_token %>
+                </p>
               </div>
             </div>
             <button 
               onclick="copyToClipboard('<%= @user.api_token %>')"
               class="ml-4 p-2 text-gray-500 hover:text-indigo-600 hover:bg-indigo-50 rounded-lg transition-colors"
               title="Copy API Token"
+              id="copyButton"
             >
-              <i data-lucide="copy" class="w-5 h-5"></i>
+              <i data-lucide="copy" class="w-5 h-5 hover:cursor-pointer"></i>
             </button>
           </div>
         </div>
@@ -62,5 +65,9 @@
 <script>
   function copyToClipboard(text) {
     navigator.clipboard.writeText(text);
+    setTimeout(() => {
+      document.querySelector('#copyButton').innerHTML = '<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" data-lucide="copy" class="lucide lucide-copy w-5 h-5 hover:cursor-pointer"><rect width="14" height="14" x="8" y="8" rx="2" ry="2"></rect><path d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"></path></svg>';
+    }, 1000);
+    document.querySelector('#copyButton').innerHTML = "<span>copied</span>";
   }
 </script>
